--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "design-system",
   "version": "0.1.0",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
