--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "design-system",
   "version": "0.1.0",
-  "main": "src/index.js",
+  "main": "src/lib.js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
