--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "peerDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
+  },
   "scripts": {
     "build": "rollup -c"
   },
